[gd_scene load_steps=2 format=3 uid="uid://667o75e7vep6"]

[ext_resource type="Script" path="res://scripts/classes/interactable.gd" id="1_es6gv"]

[node name="TriggerCollision" type="Area2D" groups=["TriggerCollision"]]
editor_description = "Basically InteractableNode but it is automatically set to walk in and it's purpose is to trigger events. "
modulate = Color(1, 1, 0, 1)
script = ExtResource("1_es6gv")
interact_type = 1
object_name = "TriggerCollision"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
